<resources>
    <string name="app_name">Wallpaper Switcher</string>
    <string name="search">Search...</string>
    <string name="nature">Nature</string>
    <string name="abstractString">Abstract</string>
    <string name="sea">Sea</string>
    <string name="city">City</string>
    <string name="trending">Trending</string>
    <string name="space">Space</string>
    <string name="apply_wallpaper">Apply Wallpaper</string>
</resources>